[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/upgrades/Contract.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ui/upgrade/upgrade_box.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/primary_almendra.tres" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sound/upgrade.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/icons/rhombus_question.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/upgrade/upgrade_animation.gd" type="Script" id=6]
[ext_resource path="res://scenes/ui/upgrade/upgrade.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/enemies/Necromancer.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Upgrade" type="Control"]
margin_right = 480.0
margin_bottom = 100.0
rect_min_size = Vector2( 480, 100 )
script = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
mix_target = 1
bus = "Effect"

[node name="Tween" type="Tween" parent="."]
script = ExtResource( 6 )

[node name="TargetEnemy" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -380.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.588235, 0.407843, 0.2, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 20
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="NinePatchRect/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer/Control"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
margin_left = 104.0
margin_right = 366.0
margin_bottom = 100.0
size_flags_horizontal = 3
alignment = 1

[node name="LabelTitle" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 5.0
margin_right = 262.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Upgrade"
valign = 1
clip_text = true

[node name="LabelPrice" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 52.0
margin_right = 262.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0.847059, 0.831373, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "$5000"
valign = 1
clip_text = true

[node name="Control2" type="Control" parent="NinePatchRect/HBoxContainer"]
margin_left = 370.0
margin_right = 480.0
margin_bottom = 100.0
rect_min_size = Vector2( 110, 100 )

[node name="LabelLevel" type="Label" parent="NinePatchRect/HBoxContainer/Control2"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "max"
align = 1
valign = 1

[node name="Button" type="Button" parent="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
flat = true

[node name="HelpButton" type="Button" parent="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HelpButton"]
modulate = Color( 0.87451, 0.572549, 0, 1 )
anchor_left = -0.167
anchor_right = 1.0
anchor_bottom = 1.167
margin_left = 0.00800037
margin_bottom = -0.00800133
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="particle_point" type="Node2D" parent="."]
position = Vector2( 424, 50 )

[connection signal="pressed" from="NinePatchRect/Button" to="." method="onPressed"]
[connection signal="button_down" from="NinePatchRect/HelpButton" to="." method="_on_HelpButton_button_down"]
